c/examples/writing-a-c-compiler-tests/tests/chapter_10/invalid_labels/extra_credit/goto_global_var.c
int x = 10;

int main(void) {
    /* goto statements can only target labels, not variables. */
    goto x;
    return 0;
}